--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "compilerOptions": {
+    "strictPropertyInitialization": false,
     "target": "ES2022",
     "module": "NodeNext",
     "moduleResolution": "NodeNext",
