--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "main": "main.js",
   "scripts": {
     "start": "npm run build && node ./dist/main.rest.js",
-    "start:dev": "npm run ts ./src/main.rest.ts | pino-pretty --colorize --translateTime SYS:standard",
+    "start:dev": "nodemon",
     "build": "npm run clean && npm run compile",
     "lint": "eslint src/ --ext .ts",
     "compile": "tsc -p tsconfig.json",
@@ -47,6 +47,7 @@
     "got": "^13.0.0",
     "inversify": "^6.0.1",
     "mongoose": "^7.5.3",
+    "nodemon": "^3.0.1",
     "pino": "^8.15.1",
     "reflect-metadata": "^0.1.13"
   }
