--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "convict-format-with-validator": "^6.2.0",
     "dayjs": "^1.11.10",
     "dotenv": "^16.3.1",
+    "eslint": "^8.49.0",
     "got": "^13.0.0",
     "inversify": "^6.0.1",
     "mongoose": "^7.5.3",
